fixes images in team descriptions not being fully shown; example is https://lichess.org/team/offerspill-sjakklubb

--- a/ui/site/css/team/_show.scss
+++ b/ui/site/css/team/_show.scss
@@ -122,6 +122,10 @@ $section-margin-more: 5vh;
     margin-bottom: 1rem;
   }
 
+  img {
+    max-width: 100%;
+  }
+  
   .userlist > li,
   .userlist > div.paginated {
     padding: 5px 0 5px 25px;
